--- a/Sign-in.html
+++ b/Sign-in.html
@@ -19,7 +19,7 @@
   <div class="C">Password: <input  class="D" type="password"  name="password" >
   </div>
  
-  <button class="E"  onclick="window.location.href = 'http://127.0.0.1:5500/doctors.html';" type="button"  >Sign in </button-->
+	<a href="doctors.html" ><button class="E"  type="button"  >Sign in </button> </a>
         
         
 </form> 
