--- a/surgeryrequest.html
+++ b/surgeryrequest.html
@@ -88,7 +88,7 @@
         </div>
           </form>
 
-          <button class="E"  onclick="window.location.href = 'http://127.0.0.1:5500/doctors.html';" type="button"  >Back </button>
+        <a href ="doctors.html" ><button class="E"  type="button"  >Back </button> </a>
     
 
   
