--- a/patient_id.html
+++ b/patient_id.html
@@ -11,13 +11,13 @@
     <body>
 
     	<h1> Search for patient Information </h1>
-<button class="E"  onclick="window.location.href = 'http://127.0.0.1:5500/doctors.html';" type="button"  >Back </button>
+	    <a href ="doctors.html"><button class="E"  type="button"  >Back </button> </a>
   
       <form action="/action_page.php">
         <div class="A">
         Patient ID: <input  class="B" type="ID" name="ID" >
         </div>
-        <button onclick="window.location.href = 'http://127.0.0.1:5500/patients_data.html';" type="button"  > Search </button>
+	      <a href="patients_data.html"> <button  type="button"  > Search </button> </a>
         
         
       </form>
